--- a/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
@@ -107,36 +107,46 @@
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="SubTitle" />
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvChannelEvent"
-                        android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/layoutChannelEvent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:ellipsize="middle"
-                        android:singleLine="true"
-                        android:text="@string/sceyt_typing"
-                        android:textColor="@color/sceyt_color_text_secondary"
-                        android:textSize="13sp"
                         android:visibility="gone"
-                        app:layout_constrainedWidth="true"
-                        app:layout_constraintEnd_toStartOf="@+id/lottieChannelEvent"
-                        app:layout_constraintHorizontal_bias="0"
-                        app:layout_constraintHorizontal_chainStyle="packed"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <com.airbnb.lottie.LottieAnimationView
-                        android:id="@+id/lottieChannelEvent"
-                        android:layout_width="20dp"
-                        android:layout_height="0dp"
-                        android:layout_marginStart="6dp"
-                        android:paddingTop="3dp"
-                        android:visibility="gone"
-                        app:layout_constraintBottom_toBottomOf="@+id/tvChannelEvent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.5"
-                        app:layout_constraintStart_toEndOf="@+id/tvChannelEvent"
-                        app:layout_constraintTop_toTopOf="@+id/tvChannelEvent"
-                        app:lottie_loop="true" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvChannelEvent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="middle"
+                            android:singleLine="true"
+                            android:text="@string/sceyt_typing"
+                            android:textColor="@color/sceyt_color_text_secondary"
+                            android:textSize="13sp"
+                            app:layout_constrainedWidth="true"
+                            app:layout_constraintEnd_toStartOf="@+id/lottieChannelEvent"
+                            app:layout_constraintHorizontal_bias="0"
+                            app:layout_constraintHorizontal_chainStyle="packed"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/lottieChannelEvent"
+                            android:layout_width="20dp"
+                            android:layout_height="0dp"
+                            android:layout_marginStart="5dp"
+                            android:paddingTop="3dp"
+                            app:layout_constraintBottom_toBottomOf="@+id/tvChannelEvent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/tvChannelEvent"
+                            app:layout_constraintTop_toTopOf="@+id/tvChannelEvent"
+                            app:lottie_loop="true"
+                            tools:lottie_autoPlay="true"
+                            tools:lottie_rawRes="@raw/sceyt_typing" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
